force-app/main/default/objects/BusinessBrand/fields/O2P_Active__c.field-meta.xml
<CustomField>
    <fullName>O2P_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this brand is active and should be available in the Experience (LWR) site. Inactive brands are hidden from customer-facing pages and configuration selectors.</description>
    <inlineHelpText>Check to make this brand available in the Experience site. Uncheck to deactivate the brand (it will be hidden from customer ordering and brand selection).</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>