force-app/main/default/objects/BusinessBrand/fields/O2P_Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>O2P_Brand_Code__c</fullName>
    <description>Stable, unique brand identifier used for configuration and internal referencing (and optional integration/upsert). Must be uppercase letters, numbers, and underscores only (e.g., DONUT_KING).</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter a unique brand code in the format ABC123_DEF (uppercase letters/numbers/underscores only). This value should never change once created. Example: DONUT_KING.</inlineHelpText>
    <label>Brand Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>