force-app/main/default/objects/BusinessBrand/fields/O2P_Domain_Slug__c.field-meta.xml
<CustomField>
    <fullName>O2P_Domain_Slug__c</fullName>
    <description>URL-friendly brand identifier used for Experience Cloud routing and theming (e.g., /b/donut-king/menu). Must be lowercase letters/numbers with single hyphens only.</description>
    <inlineHelpText>Enter a unique URL slug in lowercase using letters/numbers and hyphens only. No spaces, underscores, or trailing hyphens. Example: donut-king.</inlineHelpText>
    <label>Domain Slug</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>