force-app/main/default/objects/BusinessBrand/fields/O2P_Logo_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>O2P_Logo_Resource_Name__c</fullName>
    <description>Static Resource name used to load the brand logo in the Experience (LWR) site. Store the resource name only (not a URL).</description>
    <inlineHelpText>Enter the Static Resource name for the logo (example: donut_king_logo). If using a ZIP static resource, you may store a path like brandAssets/logo.png. Leave blank to use a default logo.</inlineHelpText>
    <label>Logo Resource Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>