force-app/main/default/objects/BusinessBrand/fields/O2P_Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>O2P_Primary_Color__c</fullName>
    <description>Primary brand color used for theming in the Experience (LWR) site. Store as a hex value (e.g., #RRGGBB or #RRGGBBAA).</description>
    <inlineHelpText>Enter a hex color code starting with “#”. Example: #FFAA00 (RGB) or #FFAA00CC (RGBA). Leave blank to use the default theme color.</inlineHelpText>
    <label>Primary Color</label>
    <length>9</length>
    <type>Text</type>
</CustomField>