force-app/main/default/objects/BusinessBrand/fields/O2P_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>O2P_Support_Email__c</fullName>
    <description>Support contact email for this brand. Used for customer communications and support routing (e.g., order confirmation footer, “contact us”).</description>
    <inlineHelpText>Enter the brand’s support email address (example: support@donut-king.com). Leave blank to use the default support email.</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>