force-app/main/default/objects/BusinessBrand/validationRules/O2P_VR_DomainSlug_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>O2P_VR_DomainSlug_Format</fullName>
    <active>true</active>
    <description>Enforce lowercase slug with hyphens only (no spaces/underscores).</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(O2P_Domain_Slug__c)),
NOT(REGEX(O2P_Domain_Slug__c, &quot;^[a-z0-9]+(?:-[a-z0-9]+)*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>O2P_Domain_Slug__c</errorDisplayField>
    <errorMessage>Domain Slug must be lowercase letters/numbers with single hyphens only (example: donut-king). No spaces, underscores, or trailing hyphens.</errorMessage>
</ValidationRule>